# L1-support-tools

./: .gitignore  AGENTS.md  README.md
01-ticket-triage-cli/: README.md
01-ticket-triage-cli/macos/: .gitignore  README.md  pyproject.toml
01-ticket-triage-cli/macos/Formula/: ticket-triage.rb
01-ticket-triage-cli/macos/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
01-ticket-triage-cli/macos/tests/: test_triage.py
01-ticket-triage-cli/macos/tests/fixtures/: access_request.txt  authentication.txt  email.txt  hardware.txt  network.txt  printing.txt  software.txt  unknown.txt
01-ticket-triage-cli/macos/ticket_triage/: __init__.py  __main__.py  rules.yaml  triage.py
01-ticket-triage-cli/windows/: .gitignore  README.md  build.ps1  pyproject.toml
01-ticket-triage-cli/windows/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
01-ticket-triage-cli/windows/tests/: test_triage.py
01-ticket-triage-cli/windows/tests/fixtures/: access_request.txt  authentication.txt  email_outlook.txt  hardware.txt  network_vpn.txt  other_unknown.txt  printing.txt  software.txt
01-ticket-triage-cli/windows/ticket_triage/: __init__.py  __main__.py  rules.yaml  triage.py
02-log-dump-parser/macos/: README.md  pyproject.toml
02-log-dump-parser/macos/Formula/: log-parse.rb
02-log-dump-parser/macos/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
02-log-dump-parser/macos/tests/: test_parser.py
02-log-dump-parser/windows/: README.md  log-parse.spec  pyproject.toml
02-log-dump-parser/windows/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
02-log-dump-parser/windows/src/log_parse/: __init__.py  __main__.py  analyzer.py  parser.py
02-log-dump-parser/windows/tests/: __init__.py  test_parser.py
02-log-dump-parser/windows/tests/fixtures/: README.md
03-runbook-automation/macos/: README.md  pyproject.toml
03-runbook-automation/macos/Formula/: runbook.rb
03-runbook-automation/macos/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
03-runbook-automation/macos/runbook/: __init__.py  __main__.py  executor.py  indexer.py  parser.py  state.py
03-runbook-automation/macos/runbooks/authentication/: reset-password.md
03-runbook-automation/macos/runbooks/infrastructure/: clear-logs.md  restart-brew-services.md
03-runbook-automation/macos/runbooks/networking/: check-connectivity.md  reset-vpn.md
03-runbook-automation/macos/tests/: __init__.py  fixtures.py  test_executor.py  test_indexer.py  test_parser.py  test_state.py
03-runbook-automation/windows/: README.md  runbook.psd1  runbook.psm1
03-runbook-automation/windows/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
03-runbook-automation/windows/private/: Invoke-Step.ps1  Parse-MarkdownSteps.ps1  Save-RunbookState.ps1
03-runbook-automation/windows/public/: Get-RunbookList.ps1  Invoke-Runbook.ps1
03-runbook-automation/windows/tests/: runbook.Tests.ps1
04-diagnostic-collector/macos/: README.md  pyproject.toml
04-diagnostic-collector/macos/Formula/: diag-collect.rb
04-diagnostic-collector/macos/diag/: __init__.py  __main__.py  collector.sh  formatters.py  thresholds.py
04-diagnostic-collector/macos/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
04-diagnostic-collector/macos/tests/: __init__.py  test_formatters.py
04-diagnostic-collector/windows/: README.md  diag-collect.ps1
04-diagnostic-collector/windows/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
04-diagnostic-collector/windows/formatters/: Format-Html.ps1  Format-Json.ps1  Format-Markdown.ps1
04-diagnostic-collector/windows/modules/: Get-ActiveUsersInfo.ps1  Get-CpuMemoryInfo.ps1  Get-DiskInfo.ps1  Get-EventLogInfo.ps1  Get-InstalledSoftwareInfo.ps1  Get-NetworkInfo.ps1  Get-NetworkTests.ps1  Get-ServiceInfo.ps1  Get-SystemInfo.ps1  Get-UpdateInfo.ps1
04-diagnostic-collector/windows/tests/: diag-collect.Tests.ps1
05-it-knowledge-cli/macos/: README.md  pyproject.toml
05-it-knowledge-cli/macos/Formula/: it-kb.rb
05-it-knowledge-cli/macos/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
05-it-knowledge-cli/macos/it_kb/: __init__.py  __main__.py  config.py  embeddings.py  indexer.py  search.py
05-it-knowledge-cli/macos/tests/: test_search.py
05-it-knowledge-cli/windows/: README.md  it-kb.spec  pyproject.toml
05-it-knowledge-cli/windows/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
05-it-knowledge-cli/windows/it_kb/: __init__.py  __main__.py  config.py  embeddings.py  indexer.py  search.py
05-it-knowledge-cli/windows/kb/sample-articles/: KB-1001-entra-id-2fa-setup.md  KB-1045-pst-recovery.md  KB-2041-outlook-profile-reset.md  KB-3001-vpn-dns-override.md
05-it-knowledge-cli/windows/tests/: test_search.py
06-bulk-action-runner/macos/: README.md  pyproject.toml
06-bulk-action-runner/macos/Formula/: bulk-run.rb
06-bulk-action-runner/macos/bulk/: __init__.py  __main__.py  config.py  csv_reader.py  operations.py  output.py  report.py
06-bulk-action-runner/macos/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
06-bulk-action-runner/macos/tests/: test_operations.py
06-bulk-action-runner/macos/tests/fixtures/: users.csv
06-bulk-action-runner/windows/: README.md  bulk-run.psd1  bulk-run.psm1
07-ad-provisioning-cli/macos/: README.md  pyproject.toml
07-ad-provisioning-cli/macos/Formula/: ad-provision.rb
07-ad-provisioning-cli/macos/ad_provision/: __init__.py  __main__.py  commands.py  config.py  graph_client.py  output.py
07-ad-provisioning-cli/macos/config/: creds.env.example
07-ad-provisioning-cli/macos/docs/: IMPLEMENTATION.md  PRD.md  TASKS.md
07-ad-provisioning-cli/macos/tests/: test_commands.py  test_config.py  test_graph_client.py  test_output.py
07-ad-provisioning-cli/windows/: README.md  ad-provision.psd1  ad-provision.psm1  install.ps1
ad-provisioning-cli/: IMPLEMENTATION.md  PRD.md  TASKS.md
bulk-action-runner/: IMPLEMENTATION.md  PRD.md  TASKS.md
diagnostic-collector/: IMPLEMENTATION.md  PRD.md  TASKS.md
it-knowledge-cli/: IMPLEMENTATION.md  PRD.md  TASKS.md
log-dump-parser/: IMPLEMENTATION.md  PRD.md  TASKS.md
runbook-automation/: IMPLEMENTATION.md  PRD.md  TASKS.md
ticket-triage-cli/: IMPLEMENTATION.md  PRD.md  TASKS.md
(+48 files in other folders)
