[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ticket-triage"
version = "1.0.0"
description = "CLI tool for triaging L1 support tickets on Windows"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "L1 Support Team"}
]
keywords = ["triage", "support", "tickets", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities",
]

dependencies = [
    "click>=8.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
llm = ["requests>=2.25.0"]

[project.scripts]
ticket-triage = "ticket_triage.__main__:main"

[project.urls]
Homepage = "https://github.com/L1-support-tools/ticket-triage-cli"
Issues = "https://github.com/L1-support-tools/ticket-triage-cli/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["ticket_triage*"]

[tool.setuptools.package-data]
ticket_triage = ["rules.yaml"]
