[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "runbook"
version = "0.1.0"
description = "CLI tool for managing and executing markdown-based runbooks"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "L1 Support Tools"}
]
keywords = ["runbook", "automation", "cli", "markdown"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Systems Administration",
]
dependencies = [
    "click>=8.0.0",
    "mistune>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
runbook = "runbook.__main__:cli"

[project.urls]
Homepage = "https://github.com/example/runbook-automation"
Repository = "https://github.com/example/runbook-automation"
Issues = "https://github.com/example/runbook-automation/issues"

[tool.hatch.build.targets.wheel]
packages = ["runbook"]

[tool.black]
line-length = 100
target-version = ['py310']

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --tb=short"
